# AutoDFT

./: .gitignore  README.md  env.yml  pyproject.toml
autodft/: __init__.py
autodft/io/: vasp.py
autodft/utils/: config.yml
autodft/workflows/: task.py
autodft/workflows/vasp/: __init__.py  convergence.py  nscf.py  phonopy.py  run_bands.py  run_dos.py  run_elastic.py  run_phonons.py  run_scf.py  scf.py
autodft/workload_magaers/: slurm.py
dev_scripts/: POTCAR  tmp.py
dev_scripts/phonopy/: POSCAR  phonopy_params.yaml
dev_scripts/phonopy/0/: INCAR  POSCAR
dev_scripts/phonopy/1/: POSCAR
dev_scripts/phonopy/2/: KPOINTS  POSCAR  POTCAR
examples/: Example 1: Running workflow.py
