[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
local_scheme="no-local-version"
version_file = "autodft/_version.py"


[project]
name = "autodft"
authors = [
    {name = "Logan Lang", email = "lllang@mix.wvu.edu"}
]
description = "Welcome to AutoDFT"
readme = {file = "README.md", content-type = "text/markdown"}  # Ensure this matches the file used
requires-python = ">=3.8"
keywords = ["materials", "science", "dft", "high-throughput", "python"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]

dynamic = ["version"]

dependencies = [
    "python-dotenv",
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "seaborn",
    "pymatgen",
    "parquetdb",
]

[project.optional-dependencies]


dev = ["sphinx", 
"sphinx_rtd_theme"]


[project.urls]
Repository = "https://github.com/romerogroup/AutoDFT"
Issues = "https://github.com/romerogroup/AutoDFT/issues"
Changelog = "https://github.com/romerogroup/AutoDFT/CHANGELOG.md"



[tool.setuptools.packages.find]
where = ["."]
include = ["autodft*"]
exclude = ["autodft.tests*"]

